Added test method for creating a new customer .